knit to markdown

--- a/R/main_reanalysis.Rmd
+++ b/R/main_reanalysis.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Example analysis for Kaelyn's Big Blast project"
-output: html_notebook
+output: github_document
 ---
 
 # Notes on the setup of the big_blast directory
@@ -27,16 +27,61 @@ Read an example dataset and figure out where the division between "short" and "l
 
 ```{r arc_check, message=FALSE, warning=FALSE}
 arc_is <- read_csv("/srv/data/big_blast/results/JGI_arc_isolates_top_bitscores.csv")
+arc_mags <- read_csv("/srv/data/big_blast/results/JGI_arc_mags_top_bitscores.csv")
+bac_is <- read_csv("/srv/data/big_blast/results/JGI_bac_isolates_top_bitscores.csv")
+bac_mag <- read_csv("/srv/data/big_blast/results/JGI_bac_mags_top_bitscores.csv")
+sags <- read_csv("/srv/data/big_blast/results/JGI_SAGs_top_bitscore.csv")
+sag <- read_csv("/srv/data/big_blast/results/JGI_SAGs_top_bitscores.csv")
+meta <- read_csv("/srv/data/big_blast/results/Metagenomes_top_bitscores.csv")
 
 p_arc_is <- ggplot(arc_is, aes(x=alignment_length)) + 
   geom_density() + 
-  geom_vline(xintercept = 170) + 
+  geom_vline(xintercept = 170)+
   scale_x_log10()
 print(p_arc_is)
+
+
+p_arc_mags <- ggplot(arc_mags, aes(x=alignment_length)) +
+  geom_density() +
+  geom_vline(xintercept = 155)+
+  scale_x_log10()
+print(p_arc_mags)
+
+p_bac_is <- ggplot(bac_is, aes(x=alignment_length)) +
+  geom_density() +
+  geom_vline(xintercept = 160)+
+  scale_x_log10()
+print(p_bac_is)
+
+p_bac_mag <- ggplot(bac_mag, aes(x=alignment_length)) +
+  geom_density() +
+  geom_vline(xintercept = 170)+
+  scale_x_log10()
+print(p_bac_mag)
+
+p_sags <- ggplot(sags, aes(x=alignment_length)) +
+  geom_density() +
+  geom_vline(xintercept = 168)+
+  scale_x_log10()
+print(p_sags)
+
+p_sag <- ggplot(sag, aes(x=alignment_length)) +
+  geom_density() +
+  geom_vline(xintercept = 170)+
+  scale_x_log10()
+print(p_sag)
+
+p_meta <- ggplot(meta, aes(x=alignment_length)) +
+  geom_density() +
+  geom_vline(xintercept = 200)+
+  scale_x_log10()
+print(p_meta)
 ```
 
+
 ```{r, message = FALSE}
-arc_mags <- read_csv("/srv/data/big_blast/results/JGI_arc_mags_top_bitscores.csv")
+
+
 ```
 
 Now that we have read in all of the data sets, we want to add a column to each saying what the source is. 
@@ -44,6 +89,11 @@ Now that we have read in all of the data sets, we want to add a column to each s
 ```{r}
 arc_is <- arc_is %>% mutate(source = "arc_isolates")
 arc_mags <- arc_mags %>% mutate(source = "arc_mags")
+bac_is <- bac_is %>% mutate(source = "bac_is")
+bac_mag <- bac_mag %>% mutate(source = "bac_mag")
+sags <- sags %>% mutate(source = "sags")
+sag <- sag %>% mutate(source = "sag")
+meta <- meta %>% mutate(source = "meta")
 
 ```
 
@@ -51,7 +101,11 @@ Each data source now has a column called `source`. The value of the column tells
 
 ```{r}
 all_data <- arc_is %>%
-  rbind(arc_mags) # rbind binds columns together by row
+  rbind(arc_mags)
+
+  
+
+# rbind binds columns together by row
 # Equivalent to writing all_data <- rbind(arc_is, bac_is)
 
 p_dens_combined <- ggplot(all_data, aes(x=alignment_length, color=source)) + 
